'Fix selection not visible', and cleaned up a bit
Fixed #3, #4 and #5

--- a/index.less
+++ b/index.less
@@ -1,34 +1,43 @@
-:host, atom-text-editor,
-:host .gutter, atom-text-editor .gutter {
+:host,
+atom-text-editor {
+
   background-color: #FFFFFF;
   color: #000000;
+
+  .gutter {
+    background-color: #FFFFFF;
+    color: #000000;
+  }
+
+  &.is-focused {
+
+    .cursor {
+      border-color: #000000;
+      border-left: 2px solid;
+    }
+
+    .line-number.cursor-line-no-selection,
+    .line.cursor-line {
+      background-color: rgba(0, 0, 0, 0.07);
+    }
+
+  }
+
+  .indent-guide {
+    // box-shadow: inset 1px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: inset 1px 0 rgba(0, 0, 0, 0.1);
+  }
+
+  .invisible-character {
+    opacity: 0.2;
+  }
+
 }
 
-:host.is-focused .cursor,
-atom-text-editor.is-focused .cursor {
-  border-color: #000000;
-}
-
-:host.is-focused .selection .region {
-atom-text-editor.is-focused .selection .region {
-  background-color: rgba(77, 151, 255, 0.33);
-}
-
-:host.is-focused .line-number.cursor-line-no-selection,
-:host.is-focused .line.cursor-line,
-atom-text-editor.is-focused .line-number.cursor-line-no-selection,
-atom-text-editor.is-focused .line.cursor-line {
-  background-color: rgba(0, 0, 0, 0.07);
-}
-
-:host .indent-guide,
-atom-text-editor .indent-guide {
-  box-shadow: inset 1px 0 rgba(0,0,0,0.5);
-}
-
-:host .invisible-character,
-atom-text-editor .invisible-character {
-  opacity: 0.2;
+atom-text-editor::shadow {
+  .selection .region {
+    background-color: rgba(77, 151, 255, 0.33);
+  }
 }
 
 .comment {
